# personal_projects

BIOGRID/: README.md  README_2.md  biogrid.db  docker-compose.yml  pyproject.toml
BIOGRID/mermaid_diagrams/: Entity_relationship_diagram.md  class_diagram.md
BIOGRID/notebooks/: biogrid_coronavirus.db  test_coronavirus_dataset_.ipynb
BIOGRID/src/biogrid/db/: manager.py  models.py
BIOGRID/tests/: test_software.py
BIOGRID/tests/data/: BIOGRID-CORONAVIRUS-test.tsv  test_data.tsv
patient_GUI/: patient_GUI.py  readme.md
secondary_structure_predictor/: readme.md
